objects/NADA_Swipe__c.object
<CustomObject>
    <description>Badge swipe object used for NADA</description>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_10__c</fullName>
        <label>Answer 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_11__c</fullName>
        <label>Answer 11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_12__c</fullName>
        <label>Answer 12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apparatus_Id__c</fullName>
        <label>Apparatus Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <formula>NADA_Scan_Device__r.Tradeshow_Show_Code__r.Campaign__r.Name</formula>
        <label>Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company2__c</fullName>
        <label>Company2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>IF((NOT(ISBLANK( Linked_Account__c )) &amp;&amp; NOT(ISBLANK( Linked_Contact__c )) || (Party_Tickets_Only__c = True) ), &quot;True&quot;, &quot;False&quot;)</formula>
        <label>Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Location__c</fullName>
        <formula>TEXT( NADA_Scan_Device__r.Demo_Location__c )</formula>
        <label>Demo Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_10_Name__c</fullName>
        <label>Demographic 10 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_10_Value__c</fullName>
        <label>Demographic 10 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_11_Name__c</fullName>
        <label>Demographic 11 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_11_Value__c</fullName>
        <label>Demographic 11 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_12_Name__c</fullName>
        <label>Demographic 12 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_12_Value__c</fullName>
        <label>Demographic 12 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Opp_Creation_Status__c</fullName>
        <formula>TEXT( NADA_Scan_Device__r.Tradeshow_Show_Code__r.Lead_Opp_Creation_Status__c )</formula>
        <label>Lead-Opp Creation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Opp_Owner_Source__c</fullName>
        <formula>TEXT( NADA_Scan_Device__r.Tradeshow_Show_Code__r.Lead_Opp_Owner_Source__c )</formula>
        <label>Lead-Opp Owner Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <formula>TEXT( NADA_Scan_Device__r.Tradeshow_Show_Code__r.Lead_Record_Type__c )</formula>
        <label>Lead Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Value__c</fullName>
        <formula>TEXT(NADA_Scan_Device__r.Tradeshow_Show_Code__r.Lead_Source_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhook</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Linked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NADA Swipes</relationshipLabel>
        <relationshipName>NADA_Swipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linked_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NADA Swipes</relationshipLabel>
        <relationshipName>NADA_Swipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturers_Picklist__c</fullName>
        <label>Manufacturers Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crane Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenworth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land-Rover</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Interaction</label>
        <referenceTo>Marketing_Interaction__c</referenceTo>
        <relationshipLabel>NADA Swipes</relationshipLabel>
        <relationshipName>NADA_Swipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NADA_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Attendee</label>
        <referenceTo>NADA_Attendees__c</referenceTo>
        <relationshipLabel>NADA Swipes</relationshipLabel>
        <relationshipName>NADA_Swipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NADA_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>NADA Swipes</relationshipLabel>
        <relationshipName>NADA_Swipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NADA_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Match</label>
        <referenceTo>NADA_Match__c</referenceTo>
        <relationshipLabel>NADA Swipes</relationshipLabel>
        <relationshipName>NADA_Swipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NADA_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>NADA Swipes</relationshipLabel>
        <relationshipName>NADA_Swipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NADA_Scan_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Scan Device Lookup</label>
        <referenceTo>NADA_Device__c</referenceTo>
        <relationshipLabel>NADA Swipes</relationshipLabel>
        <relationshipName>NADA_Swipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date_Offset__c</fullName>
        <formula>TEXT(NADA_Scan_Device__r.Tradeshow_Show_Code__r.Opportunity_Close_Date__c)</formula>
        <label>Opportunity Close Date Offset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lead_Source_Field__c</fullName>
        <formula>TEXT(NADA_Scan_Device__r.Tradeshow_Show_Code__r.Opportunity_Lead_Source_Field__c)</formula>
        <label>Opportunity Lead Source Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>TEXT( NADA_Scan_Device__r.Tradeshow_Show_Code__r.Opportunity_Record_Type__c )</formula>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Tickets_Only__c</fullName>
        <formula>NADA_Scan_Device__r.Tradeshow_Show_Code__r.Party_Tickets_Only__c</formula>
        <label>Party Tickets Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Area__c</fullName>
        <formula>NADA_Scan_Device__r.NADA_Presentation_Area__r.Name</formula>
        <label>Presentation Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <label>Question 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_11__c</fullName>
        <label>Question 11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_12__c</fullName>
        <label>Question 12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RawData_Manufacturers__c</fullName>
        <label>RawData Manufacturers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Date_Time__c</fullName>
        <label>Server Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Show_Code__c</fullName>
        <label>Show Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Match_Reason__c</fullName>
        <inlineHelpText>Only set this value if no Match is needed (i.e.-account is not in SalesForce.com)  It will be used for exporting data to send to International (or whomever needs the information)</inlineHelpText>
        <label>Skip Match Reason</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swiped_Card_Number__c</fullName>
        <label>Swiped Card Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swiped_Date_Time__c</fullName>
        <label>Swiped Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <formula>TEXT(NADA_Scan_Device__r.Tradeshow_Show_Code__r.Target_Market__c)</formula>
        <label>Target Market</label>
        <type>Text</type>
    </fields>
    <label>NADA Swipe</label>
    <listViews>
        <fullName>All_Swipes</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Apparatus_Id__c</columns>
        <columns>Swiped_Card_Number__c</columns>
        <columns>Skip_Match_Reason__c</columns>
        <columns>Swiped_Date_Time__c</columns>
        <columns>NADA_Lead__c</columns>
        <columns>NADA_Attendee__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Swipes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Swipes_for_2015</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Apparatus_Id__c</columns>
        <columns>Swiped_Card_Number__c</columns>
        <columns>Skip_Match_Reason__c</columns>
        <columns>Swiped_Date_Time__c</columns>
        <columns>NADA_Lead__c</columns>
        <columns>NADA_Attendee__c</columns>
        <columns>NADA_Opportunity__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>All Swipes for 2015</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Party_Tickets_Only_Swipes</fullName>
        <columns>NAME</columns>
        <columns>Party_Tickets_Only__c</columns>
        <columns>Completed__c</columns>
        <columns>Apparatus_Id__c</columns>
        <columns>Swiped_Card_Number__c</columns>
        <columns>Skip_Match_Reason__c</columns>
        <columns>Swiped_Date_Time__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Party_Tickets_Only__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Party Tickets Only Swipes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swipes_Linked</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Apparatus_Id__c</columns>
        <columns>Swiped_Card_Number__c</columns>
        <columns>Skip_Match_Reason__c</columns>
        <columns>NADA_Lead__c</columns>
        <columns>NADA_Attendee__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Swiped_Date_Time__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>Skip_Match_Reason__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Party_Tickets_Only__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Swipes Linked</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swipes_Skipped</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Apparatus_Id__c</columns>
        <columns>Swiped_Card_Number__c</columns>
        <columns>Skip_Match_Reason__c</columns>
        <columns>NADA_Lead__c</columns>
        <columns>NADA_Attendee__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Swiped_Date_Time__c</columns>
        <columns>Phone__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>Skip_Match_Reason__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Party_Tickets_Only__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Swipes Skipped</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swipes_Skipped_3rd_Party</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Apparatus_Id__c</columns>
        <columns>Swiped_Card_Number__c</columns>
        <columns>Skip_Match_Reason__c</columns>
        <columns>NADA_Lead__c</columns>
        <columns>NADA_Attendee__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Swiped_Date_Time__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>Skip_Match_Reason__c</field>
            <operation>equals</operation>
            <value>3rd Party</value>
        </filters>
        <filters>
            <field>Party_Tickets_Only__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Swipes Skipped - 3rd Party</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swipes_Skipped_International</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Apparatus_Id__c</columns>
        <columns>Swiped_Card_Number__c</columns>
        <columns>Skip_Match_Reason__c</columns>
        <columns>NADA_Lead__c</columns>
        <columns>NADA_Attendee__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Swiped_Date_Time__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>Skip_Match_Reason__c</field>
            <operation>equals</operation>
            <value>International</value>
        </filters>
        <filters>
            <field>Party_Tickets_Only__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Swipes Skipped - International</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swipes_Skipped_Not_A_Lead</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Apparatus_Id__c</columns>
        <columns>Swiped_Card_Number__c</columns>
        <columns>Skip_Match_Reason__c</columns>
        <columns>NADA_Lead__c</columns>
        <columns>NADA_Attendee__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Swiped_Date_Time__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>Skip_Match_Reason__c</field>
            <operation>equals</operation>
            <value>Not a Lead</value>
        </filters>
        <filters>
            <field>Party_Tickets_Only__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Swipes Skipped - Not A Lead</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swipes_To_Match</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Apparatus_Id__c</columns>
        <columns>Swiped_Card_Number__c</columns>
        <columns>Skip_Match_Reason__c</columns>
        <columns>Swiped_Date_Time__c</columns>
        <columns>NADA_Lead__c</columns>
        <columns>NADA_Attendee__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filters>
        <filters>
            <field>Party_Tickets_Only__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>1 - Swipes To Match</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>NADA Swipe ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NADA Swipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>